test/error/SymbolUnknown.fu
public class Test
{
	public static bool Run()
	{
		while (x) { //ERROR: 'x' not found
		}
		int z = Foo.Bar; //ERROR: 'Foo' not found
		bool b = true;
		int y = b ? x : false; //ERROR: 'x' not found
		return x + 1; //ERROR: 'x' not found
	}
}
